--- a/frontend/src/components/routes/auth/ResetPassword/ResetPassword.module.scss
+++ b/frontend/src/components/routes/auth/ResetPassword/ResetPassword.module.scss
@@ -1,12 +1,25 @@
+@use "../auth-common" as auth;
+
 .header {
-  text-align: center;
-  margin-bottom: 30px;
+  @include auth.auth-header;
+}
 
-  h2 {
-    margin: 0;
+.resetPasswordCard {
+  @include auth.auth-card;
+
+  form {
+    @include auth.auth-inputs;
+    @include auth.auth-button(0.5rem);
   }
 
-  p {
-    margin-top: -0;
+  footer {
+    @include auth.auth-footer-link;
   }
+}
+
+.loadingWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
 }
