--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -41,10 +41,15 @@ html {
 }
 
 body {
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Outfit', sans-serif;
   color: var(--hi-text);
   background-color: var(--hi-color-gray) !important;
   height: auto;
+  letter-spacing: 0.2px;
+}
+
+h1, h2, h3 {
+  letter-spacing: 0.3px;
 }
 
 fieldset {
