--- a/frontend/src/styles/widget/default.scss
+++ b/frontend/src/styles/widget/default.scss
@@ -42,6 +42,12 @@
 
       .hi-product-description-row {
         font-size: .9em;
+
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px 0;
+        }
       }
 
       .hi-title-row {
