--- a/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
+++ b/frontend/src/components/layouts/OrganizerHomepage/OrganizerHomepage.module.scss
@@ -438,7 +438,7 @@ $transition-slow: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
   padding: 4px;
 
   @include mixins.respond-below(sm) {
-    justify-content: center;
+    width: 100%;
   }
 }
 
@@ -455,6 +455,11 @@ $transition-slow: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover:not(.filterButtonActive) {
     color: var(--primary-text-color);
+  }
+
+  @include mixins.respond-below(sm) {
+    flex: 1;
+    text-align: center;
   }
 }
 
