--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -43,7 +43,7 @@ html {
 body {
   font-family: 'Outfit', sans-serif;
   color: var(--hi-text);
-  background-color: var(--hi-color-gray) !important;
+  background-color: var(--checkout-background, var(--hi-color-gray)) !important;
   height: auto;
   letter-spacing: 0.2px;
 }
